--- a/template/.pre-commit-config.yaml
+++ b/template/.pre-commit-config.yaml
@@ -105,6 +105,14 @@ repos:
             |src/.*
             |tests/.*
           )$
+  - repo: "https://github.com/rbubley/mirrors-prettier"
+    rev: "v3.3.3"
+    hooks:
+      - id: prettier
+  - repo: https://github.com/ComPWA/taplo-pre-commit
+    rev: v0.9.3
+    hooks:
+      - id: taplo-format
   - repo: "https://github.com/charliermarsh/ruff-pre-commit"
     rev: "v0.5.1"
     hooks:
