--- a/scripts/pyproject.toml
+++ b/scripts/pyproject.toml
@@ -8,7 +8,6 @@ version = "0.0.0"
 description = "Tools."
 dependencies = [
   # ? Core script tools
-  "copier==9.2.0",
   "cyclopts==2.9.3",
   "dulwich==0.22.1",
   "ipython==8.26.0",
@@ -18,7 +17,7 @@ dependencies = [
   "toml==0.10.2 ; python_version < '3.11'",
 ]
 [project.scripts]
-"copier_python-tools" = "copier_python_tools.__main__:main"
+"copier-python-tools" = "copier-python_tools.__main__:main"
 "copier_python_tools" = "copier_python_tools.__main__:main"
 
 [tool.fawltydeps]
