--- a/scripts/pyproject.toml
+++ b/scripts/pyproject.toml
@@ -17,7 +17,7 @@ dependencies = [
   "toml==0.10.2 ; python_version < '3.11'",
 ]
 [project.scripts]
-"copier-python-tools" = "copier-python_tools.__main__:main"
+"copier-python-tools" = "copier_python_tools.__main__:main"
 "copier_python_tools" = "copier_python_tools.__main__:main"
 
 [tool.fawltydeps]
