Fix a few things

--- a/.renovaterc.json
+++ b/.renovaterc.json
@@ -2,33 +2,56 @@
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "description": "Establish base config, schedule, and manager defaults",
   "addLabels": ["dependencies"],
-  "extends": ["config:base", "group:all", ":enablePreCommit"],
-  "dependencyDashboardApproval": false,
-  "schedule": ["on the 16th day of the month"],
-  "git-submodules": {
-    "enabled": true
-  },
+  "extends": [
+    ":dependencyDashboard",
+    ":semanticPrefixFixDepsChoreOthers",
+    ":ignoreModulesAndTests",
+    "replacements:all",
+    "workarounds:all"
+  ],
+  "dependencyDashboardApproval": true,
+  "lockFileMaintenance": { "enabled": true },
+  "separateMajorMinor": false,
+  "git-submodules": { "enabled": true },
+  "pre-commit": { "enabled": true },
   "enabledManagers": [
     "custom.regex",
     "devcontainer",
     "git-submodules",
     "github-actions",
     "pep621",
-    "pip_requirements",
     "pre-commit"
   ],
   "customManagers": [
     {
+      "description": "uv",
+      "customType": "regex",
+      "fileMatch": ["^\\.uv-version$"],
+      "matchStrings": ["(?<currentValue>[^\\n]+)"],
+      "datasourceTemplate": "github-releases",
+      "depNameTemplate": "astral-sh/uv"
+    },
+    {
+      "description": "uv-gha",
+      "customType": "regex",
+      "fileMatch": ["^\\.github/workflows/.*$"],
+      "matchStrings": ["- uses: \"astral-sh/setup-uv@.+\\n\\s+with:\\n\\s+version: \"(?<currentValue>.+)\""],
+      "datasourceTemplate": "github-releases",
+      "depNameTemplate": "astral-sh/uv"
+    },
+    {
+      "description": "Copier",
+      "customType": "regex",
+      "fileMatch": ["^\\.copier-version$"],
+      "matchStrings": ["(?<currentValue>[^\\n]+)"],
+      "datasourceTemplate": "pypi",
+      "depNameTemplate": "copier"
+    },
+    {
       "description": "Pylance",
       "customType": "regex",
-      "fileMatch": [
-        "^pyproject\\.toml$",
-        "^\\.devcontainer/devcontainer\\.json$"
-      ],
-      "matchStrings": [
-        "PYRIGHT_PYTHON_PYLANCE_VERSION = \"(?<currentValue>.+)\"",
-        "ms-python\\.vscode-pylance@(?<currentValue>[^\"]+)"
-      ],
+      "fileMatch": ["^\\.pylance-version$"],
+      "matchStrings": ["(?<currentValue>[^\\n]+)"],
       "datasourceTemplate": "github-releases",
       "depNameTemplate": "microsoft/pylance-release"
     }
@@ -41,20 +64,20 @@
     "description": "Additionally monitor these files",
     "fileMatch": ["(^|/)pyproject\\.toml\\.jinja$"]
   },
-  "pip_requirements": {
-    "description": "Additionally monitor these files",
-    "fileMatch": ["(^|/)requirements/.+$"]
-  },
   "ignorePaths": ["requirements/requirements.txt"],
   "packageRules": [
     {
-      "description": "Sync with template",
-      "groupName": "template",
-      "matchManagers": ["git-submodules"],
-      "matchDepNames": ["submodules/template"]
+      "groupName": "all dependencies",
+      "groupSlug": "all",
+      "matchPackageNames": ["*"]
     },
     {
-      "description": "Manually test `.devcontainer` updates separately",
+      "description": "Update regex pins separately",
+      "groupName": "regex",
+      "matchManagers": ["regex"]
+    },
+    {
+      "description": "Update `.devcontainer` updates separately for manual testing",
       "groupName": "devcontainer",
       "matchManagers": ["devcontainer"]
     }
