--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,11 @@
 # * -------------------------------------------------------------------------------- * #
 # * Template gitignore
 
+# Ignore local uv
+uv
+uv.exe
+uvx
+uvx.exe
 # Ignore local dev environment settings
 *.env
 # local workspace extensions directory
