--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,14 +27,55 @@ Tracker = "https://github.com/blakeNaccarato/copier-python/issues"
 name = "Blake Naccarato"
 email = "blake.naccarato@gmail.com"
 
+[tool.uv]
+constraints-dependencies = [
+  # ? Security
+  # ? https://nvd.nist.gov/vuln/detail/CVE-2024-37891
+  # ? via sphinx
+  "urllib3>=2.2.2",
+]
+dev-dependencies = [
+  # ? Workspaces
+  "dev",
+  # ? Dev
+  "debugpy==1.8.2",
+  "fawltydeps==0.16.0",
+  "pipdeptree==2.23.0",
+  "pre-commit==3.7.1",
+  "pyright==1.1.371",
+  "ruff==0.5.1",
+  "snakeviz==2.2.0",
+  "sourcery==1.21.0",
+  "towncrier==23.11.0",
+  # ? Docs
+  "linkify-it-py==2.0.3",
+  "myst-nb==1.1.1",
+  "sphinx-autobuild==2024.4.16",
+  "sphinx-autodoc2==0.5.0",
+  "sphinx-book-theme==1.1.3",
+  "sphinx-design==0.6.0",
+  "sphinx-thebe==0.3.1",
+  "sphinx-tippy==0.4.3",
+  "sphinx-togglebutton==0.3.2",
+  "sphinxcontrib-bibtex==2.6.2",
+  "sphinxcontrib-mermaid==0.9.2",
+  "sphinxcontrib-towncrier==0.4.0a0",
+  # ? Tests
+  "pytest-cov==5.0.0",
+  "pytest-custom-exit-code==0.3.0",
+  "pytest-github-actions-annotate-failures==0.2.0",
+  "pytest==8.2.2",
+]
+[tool.uv.pip]
+all-extras = true
+[tool.uv.workspace]
+members = ["packages/*"]
+[tool.uv.sources]
+dev = { workspace = true }
+
 [tool.coverage.run]
 branch = true
-source = [
-  "copier_python",
-  "copier_python_docs",
-  "copier_python_tests",
-  "copier_python_tools",
-]
+source = ["copier_python", "dev", "tests"]
 
 [tool.fawltydeps]
 deps = ["pyproject.toml"]
@@ -54,10 +95,9 @@ markers = "slow"
 testpaths = "tests"
 xfail_strict = true
 
-[tool.copier_python_env]
+[tool.env]
 COVERAGE_CORE = "sysmon"
 JUPYTER_PLATFORM_DIRS = "1"
-PYRIGHT_PYTHON_PYLANCE_VERSION = "2024.6.1"
 PYDEVD_DISABLE_FILE_VALIDATION = "1"
 PYTHONIOENCODING = "utf-8:strict"
 PYTHONUTF8 = "1"
@@ -87,9 +127,9 @@ name = "Changes"
 showcontent = true
 
 [tool.pyright]
-stubPath = "submodules/stubs/stubs"
-exclude = ["**/node_modules", "**/__pycache__", "**/.*", ".cache", "bin", "submodules"]
-ignore = ["**/node_modules", "**/__pycache__", "**/.*", ".cache", "bin"]
+stubPath = "typings/stubs"
+exclude = ["**/node_modules", "**/__pycache__", "**/.*", ".cache", "typings"]
+ignore = ["**/node_modules", "**/__pycache__", "**/.*", ".cache", "typings"]
 typeCheckingMode = "strict"
 # Default "true" in strict
 analyzeUnannotatedFunctions = true
@@ -188,8 +228,8 @@ reportUnusedCallResult = "none"
 
 [tool.ruff]
 cache-dir = ".cache/.ruff_cache"
-extend-exclude = ["bin", "submodules"]
-extend-include = ["*.ipynb"]
+extend-exclude = ["packages", "typings"]
+extend-include = ["*.ipynb", "packages/_dev"]
 src = ["src", "docs", "scripts", "tests"]
 output-format = "grouped"
 fix = true
@@ -271,7 +311,7 @@ convention = "numpy"
   "S101", # Allow assert
   "T201", # Allow print in notebooks
 ]
-"scripts/copier_python_tools/add_changes.py" = [
+"packages/_dev/dev/tools/add_changes.py" = [
   "S603", # Allow shell expressions here
   "S607", # Allow shell expressions here
 ]
