--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "stubs"]
-	path = submodules/stubs
+[submodule "typings"]
+	path = typings
 	url = https://github.com/microsoft/python-type-stubs.git
