--- a/template/.pre-commit-config.yaml
+++ b/template/.pre-commit-config.yaml
@@ -30,13 +30,13 @@ repos:
         pass_filenames: false
         language: "system"
         entry: |
-          pwsh -Command ". scripts/Sync-Env.ps1"
+          pwsh -Command "./Invoke-Uv.ps1 -Sync -Update"
       - id: "fawltydeps-src"
         name: "fawltydeps-src"
         pass_filenames: false
         language: "system"
         entry: |
-          pwsh -Command ". scripts/Sync-Env.ps1; fawltydeps --config-file pyproject.toml"
+          pwsh -Command "./Invoke-Uv.ps1 fawltydeps --config-file pyproject.toml"
         files: |
           (?x)^(
             pyproject\.toml
@@ -47,7 +47,7 @@ repos:
         pass_filenames: false
         language: "system"
         entry: |
-          pwsh -Command ". scripts/Sync-Env.ps1; fawltydeps --config-file packages/_dev/pyproject.toml"
+          pwsh -Command "./Invoke-Uv.ps1 fawltydeps --config-file packages/_dev/pyproject.toml"
         files: |
           (?x)^(
             packages/_dev/.*
@@ -59,7 +59,7 @@ repos:
         pass_filenames: false
         language: "system"
         entry: |
-          pwsh -Command ". scripts/Sync-Env.ps1; pytest -m 'not slow'"
+          pwsh -Command "./Invoke-Uv.ps1 pytest -m 'not slow'"
         files: |
           (?x)^(
             .*/pyproject\.toml
