--- a/.renovaterc.json
+++ b/.renovaterc.json
@@ -26,7 +26,7 @@
     {
       "description": "uv",
       "customType": "regex",
-      "fileMatch": ["^\\.uv-version$"],
+      "fileMatch": ["(^|/)\\.uv-version$"],
       "matchStrings": ["(?<currentValue>[^\\n]+)"],
       "datasourceTemplate": "github-releases",
       "depNameTemplate": "astral-sh/uv"
@@ -34,7 +34,7 @@
     {
       "description": "uv-gha",
       "customType": "regex",
-      "fileMatch": ["^\\.github/workflows/.*$"],
+      "fileMatch": ["(^|/)\\.github/workflows/.+$"],
       "matchStrings": ["- uses: \"astral-sh/setup-uv@.+\\n\\s+with:\\n\\s+version: \"(?<currentValue>.+)\""],
       "datasourceTemplate": "github-releases",
       "depNameTemplate": "astral-sh/uv"
@@ -42,7 +42,7 @@
     {
       "description": "Copier",
       "customType": "regex",
-      "fileMatch": ["^\\.copier-version$"],
+      "fileMatch": ["(^|/)\\.copier-version$"],
       "matchStrings": ["(?<currentValue>[^\\n]+)"],
       "datasourceTemplate": "pypi",
       "depNameTemplate": "copier"
@@ -50,7 +50,7 @@
     {
       "description": "Pylance",
       "customType": "regex",
-      "fileMatch": ["^\\.pylance-version$"],
+      "fileMatch": ["(^|/)\\.pylance-version$"],
       "matchStrings": ["(?<currentValue>[^\\n]+)"],
       "datasourceTemplate": "github-releases",
       "depNameTemplate": "microsoft/pylance-release"
@@ -58,7 +58,7 @@
   ],
   "github-actions": {
     "description": "Additionally monitor these files",
-    "fileMatch": ["(^|/)\\.github/workflows/.+\\.ya?ml.jinja$"]
+    "fileMatch": ["(^|/)\\.github/workflows/.+$"]
   },
   "pep621": {
     "description": "Additionally monitor these files",
@@ -72,9 +72,19 @@
       "matchPackageNames": ["*"]
     },
     {
-      "description": "Update regex pins separately",
-      "groupName": "regex",
-      "matchManagers": ["regex"]
+      "description": "Update uv separately",
+      "groupName": "uv",
+      "matchPackageNames": ["astral-sh/uv"]
+    },
+    {
+      "description": "Update Pylance separately",
+      "groupName": "pylance",
+      "matchPackageNames": ["microsoft/pylance-release"]
+    },
+    {
+      "description": "Update Copier separately",
+      "groupName": "copier",
+      "matchPackageNames": ["copier"]
     },
     {
       "description": "Update `.devcontainer` updates separately for manual testing",
