Note the divergence of this template

--- a/template/.renovaterc.json
+++ b/template/.renovaterc.json
@@ -26,7 +26,7 @@
     {
       "description": "uv",
       "customType": "regex",
-      "fileMatch": ["^\\.uv-version$"],
+      "fileMatch": ["[^|/]\\.uv-version[^/]*$"],
       "matchStrings": ["(?<currentValue>[^\\n]+)"],
       "datasourceTemplate": "github-releases",
       "depNameTemplate": "astral-sh/uv"
@@ -34,7 +34,7 @@
     {
       "description": "uv-gha",
       "customType": "regex",
-      "fileMatch": ["^\\.github/workflows/.*$"],
+      "fileMatch": ["[^|/]\\.github/workflows/[^/]*$"],
       "matchStrings": ["- uses: \"astral-sh/setup-uv@.+\\n\\s+with:\\n\\s+version: \"(?<currentValue>.+)\""],
       "datasourceTemplate": "github-releases",
       "depNameTemplate": "astral-sh/uv"
@@ -42,7 +42,7 @@
     {
       "description": "Copier",
       "customType": "regex",
-      "fileMatch": ["^\\.copier-version$"],
+      "fileMatch": ["[^|/]\\.copier-version[^/]*$"],
       "matchStrings": ["(?<currentValue>[^\\n]+)"],
       "datasourceTemplate": "pypi",
       "depNameTemplate": "copier"
@@ -50,7 +50,7 @@
     {
       "description": "Pylance",
       "customType": "regex",
-      "fileMatch": ["^\\.pylance-version$"],
+      "fileMatch": ["[^|/]\\.pylance-version[^/]*$"],
       "matchStrings": ["(?<currentValue>[^\\n]+)"],
       "datasourceTemplate": "github-releases",
       "depNameTemplate": "microsoft/pylance-release"
@@ -58,37 +58,53 @@
   ],
   "packageRules": [
     {
-      "groupName": "all dependencies",
-      "groupSlug": "all",
+      "groupName": "all",
       "matchPackageNames": ["*"]
     },
     {
-      "description": "Update uv separately",
+      "groupName": "dev",
+      "matchDepTypes": ["devDependencies"]
+    },
+    {
+      "groupName": "gha",
+      "matchManagers": ["github-actions"]
+    },
+    {
+      "groupName": "dev package",
+      "matchFileNames": ["[^|/]packages/_dev/pyproject.toml[^/]*$"]
+    },
+    {
       "groupName": "uv",
       "matchPackageNames": ["astral-sh/uv"]
     },
     {
-      "description": "Update ruff separately",
       "groupName": "ruff",
-      "matchPackageNames": ["ruff", "charliermarsh/ruff-pre-commit"]
+      "matchPackageNames": [".*ruff.*"]
     },
     {
-      "description": "Update fawltydeps separately",
       "groupName": "fawltydeps",
-      "matchPackageNames": ["fawltydeps"]
+      "matchPackageNames": [".*fawltydeps.*"]
     },
     {
-      "description": "Update Pylance separately",
       "groupName": "pylance",
       "matchPackageNames": ["microsoft/pylance-release"]
     },
     {
-      "description": "Update Copier separately",
       "groupName": "copier",
       "matchPackageNames": ["copier"]
     },
     {
-      "description": "Update `.devcontainer` updates separately for manual testing",
+      "groupName": "tests",
+      "matchPackageNames": [".*pytest.*"],
+      "matchDepTypes": ["devDependencies"]
+    },
+    {
+      "groupName": "docs",
+      "matchPackageNames": ["docutils", "numpydoc", ".*sphinx.*", ".*myst.*"],
+      "matchDepTypes": ["devDependencies"]
+    },
+    {
+      "description": "Update `.devcontainer` separately for manual testing",
       "groupName": "devcontainer",
       "matchManagers": ["devcontainer"]
     }
