--- a/.copier-answers.yml
+++ b/.copier-answers.yml
@@ -1,5 +1,5 @@
 # Changes here will be overwritten by Copier; NEVER EDIT MANUALLY
-_commit: 2024.1.1-255-gecf70cc
+_commit: 2024.1.1-256-gb3149c2
 _src_path: gh:blakeNaccarato/copier-python
 actions_runner: ubuntu-22.04
 github_repo_name: copier-python
