--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -39,14 +39,14 @@
     {
       "label": "setup: Sync with template",
       "type": "shell",
-      "command": ". ./Dev.ps1 && Sync-Template ${input:templateOptions}",
+      "command": ". ./dev.ps1 && Sync-Template ${input:templateOptions}",
       "icon": { "id": "file-symlink-directory" },
       "problemMatcher": []
     },
     {
       "label": "setup: Sync with specific template ref",
       "type": "shell",
-      "command": ". ./Dev.ps1 && Sync-Template ${input:ref} ${input:templateOptions}",
+      "command": ". ./dev.ps1 && Sync-Template ${input:ref} ${input:templateOptions}",
       "icon": { "id": "file-symlink-directory" },
       "problemMatcher": []
     },
@@ -63,7 +63,7 @@
     {
       "label": "setup: Initialize repository",
       "type": "shell",
-      "command": ". ./Dev.ps1 && Initialize-Repo",
+      "command": ". ./dev.ps1 && Initialize-Repo",
       "icon": { "id": "file-symlink-directory" },
       "problemMatcher": []
     },
@@ -78,7 +78,7 @@
       "label": "setup: Initialize Windows machine",
       "type": "shell",
       "options": { "shell": { "executable": "powershell" } },
-      "command": ". ./Dev.ps1 && Initialize-Windows",
+      "command": ". ./dev.ps1 && Initialize-Windows",
       "icon": { "id": "file-symlink-directory" },
       "problemMatcher": []
     },
@@ -93,7 +93,7 @@
     {
       "label": "setup: Finish initializing machine (cross-platform)",
       "type": "shell",
-      "command": ". ./Dev.ps1 && Initialize-Machine",
+      "command": ". ./dev.ps1 && Initialize-Machine",
       "icon": { "id": "file-symlink-directory" },
       "problemMatcher": []
     },
@@ -139,7 +139,7 @@
     {
       "label": "task: Run ruff",
       "type": "shell",
-      "command": ". ./Dev.ps1 && iuv ruff check . && iuv ruff format .",
+      "command": ". ./dev.ps1 && iuv ruff check . && iuv ruff format .",
       "icon": { "id": "check" },
       "problemMatcher": []
     },
@@ -174,7 +174,7 @@
     {
       "label": "task: Bump version",
       "type": "shell",
-      "command": ". ./Dev.ps1 && uvx copier@9.2.0 update --vcs-ref=HEAD --defaults --data project_version='${input:version}' && iuv towncrier build --yes --version '${input:version}' && git add . && git commit -m '${input:version}'",
+      "command": ". ./dev.ps1 && uvx copier@9.2.0 update --vcs-ref=HEAD --defaults --data project_version='${input:version}' && iuv towncrier build --yes --version '${input:version}' && git add . && git commit -m '${input:version}'",
       "icon": { "id": "tag" },
       "problemMatcher": []
     },
