--- a/template/.renovaterc.json
+++ b/template/.renovaterc.json
@@ -1,6 +1,5 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "description": "Establish base config, schedule, and manager defaults",
   "addLabels": ["dependencies"],
   "extends": [
     ":dependencyDashboard",
@@ -40,7 +39,7 @@
       "depNameTemplate": "astral-sh/uv"
     },
     {
-      "description": "Copier",
+      "description": "copier",
       "customType": "regex",
       "fileMatch": ["[^|/]\\.copier-version[^/]*$"],
       "matchStrings": ["(?<currentValue>[^\\n]+)"],
@@ -48,7 +47,7 @@
       "depNameTemplate": "copier"
     },
     {
-      "description": "Pylance",
+      "description": "pylance",
       "customType": "regex",
       "fileMatch": ["[^|/]\\.pylance-version[^/]*$"],
       "matchStrings": ["(?<currentValue>[^\\n]+)"],
@@ -58,8 +57,7 @@
   ],
   "packageRules": [
     {
-      "groupName": "all",
-      "matchPackageNames": ["*"]
+      "groupName": "all"
     },
     {
       "groupName": "dev",
@@ -67,7 +65,8 @@
     },
     {
       "groupName": "gha",
-      "matchManagers": ["github-actions"]
+      "matchManagers": ["github-actions"],
+      "excludePackageNames": ["astral-sh/uv"]
     },
     {
       "groupName": "dev package",
@@ -95,16 +94,13 @@
     },
     {
       "groupName": "tests",
-      "matchPackageNames": [".*pytest.*"],
-      "matchDepTypes": ["devDependencies"]
+      "matchPackageNames": [".*pytest.*"]
     },
     {
       "groupName": "docs",
-      "matchPackageNames": ["docutils", "numpydoc", ".*sphinx.*", ".*myst.*"],
-      "matchDepTypes": ["devDependencies"]
+      "matchPackageNames": ["docutils", "numpydoc", ".*sphinx.*", ".*myst.*"]
     },
     {
-      "description": "Update `.devcontainer` separately for manual testing",
       "groupName": "devcontainer",
       "matchManagers": ["devcontainer"]
     }
