--- a/template/.renovaterc.json
+++ b/template/.renovaterc.json
@@ -78,7 +78,7 @@
     },
     {
       "groupName": "ruff",
-      "matchPackageNames": [".*ruff.*"]
+      "matchPackageNames": ["/^.*ruff.*$/"]
     },
     {
       "groupName": "fawltydeps",
@@ -94,11 +94,11 @@
     },
     {
       "groupName": "tests",
-      "matchPackageNames": [".*pytest.*"]
+      "matchPackageNames": ["/^.*pytest.*$/"]
     },
     {
       "groupName": "docs",
-      "matchPackageNames": ["docutils", "numpydoc", ".*sphinx.*", ".*myst.*"]
+      "matchPackageNames": ["docutils", "numpydoc", "/^.*sphinx.*$/", "/^.*myst.*$/"]
     },
     {
       "groupName": "devcontainer",
