--- a/template/.renovaterc.json
+++ b/template/.renovaterc.json
@@ -57,7 +57,8 @@
   ],
   "packageRules": [
     {
-      "groupName": "all"
+      "groupName": "all",
+      "matchPackageNames": ["*"]
     },
     {
       "groupName": "dev",
@@ -82,7 +83,7 @@
     },
     {
       "groupName": "fawltydeps",
-      "matchPackageNames": [".*fawltydeps.*"]
+      "matchPackageNames": ["/^.*fawltydeps.*$/"]
     },
     {
       "groupName": "pylance",
