Fix uv package name

--- a/.renovaterc.json
+++ b/.renovaterc.json
@@ -73,7 +73,6 @@
     {
       "groupName": "gha",
       "matchManagers": ["github-actions"],
-      "excludePackageNames": ["astral-sh/uv"]
     },
     {
       "groupName": "dev package",
@@ -81,7 +80,7 @@
     },
     {
       "groupName": "uv",
-      "matchPackageNames": ["astral-sh/uv"]
+      "matchPackageNames": ["astral-sh/setup-uv"]
     },
     {
       "groupName": "ruff",
