--- a/packages/_dev/pyproject.toml
+++ b/packages/_dev/pyproject.toml
@@ -28,7 +28,7 @@ deps = ["packages/_dev/pyproject.toml"]
 code = ["packages/_dev", "docs", "tests"]
 ignore_undeclared = [
   # ? This project
-  "copier_python",
+  "copier_pipeline",
   # ? Workspaces
   "dev",
 ]
