--- a/.renovaterc.json
+++ b/.renovaterc.json
@@ -72,7 +72,7 @@
     },
     {
       "groupName": "gha",
-      "matchManagers": ["github-actions"],
+      "matchManagers": ["github-actions"]
     },
     {
       "groupName": "dev package",
