--- a/template/.renovaterc.json
+++ b/template/.renovaterc.json
@@ -66,7 +66,7 @@
     },
     {
       "groupName": "gha",
-      "matchManagers": ["github-actions"],
+      "matchManagers": ["github-actions"]
     },
     {
       "groupName": "dev package",
