--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,34 +38,34 @@ dev-dependencies = [
   # ? Workspaces
   "dev",
   # ? Dev
-  "debugpy==1.8.2",
-  "fawltydeps==0.16.0",
-  "pipdeptree==2.23.0",
-  "pre-commit==3.7.1",
-  "pyright==1.1.371",
-  "ruff==0.5.1",
-  "snakeviz==2.2.0",
-  "sourcery==1.21.0",
+  "debugpy>=1.8.2",
+  "fawltydeps>=0.16.0",
+  "pipdeptree>=2.23.0",
+  "pre-commit>=3.7.1",
+  "pyright>=1.1.371",
+  "ruff>=0.5.1",
+  "snakeviz>=2.2.0",
+  "sourcery>=1.21.0",
   # ? https://github.com/sphinx-contrib/sphinxcontrib-towncrier/issues/92
-  "towncrier==23.11.0, <24",
+  "towncrier>=23.11.0, <24.7.0",
   # ? Docs
-  "linkify-it-py==2.0.3",
-  "myst-nb==1.1.1",
-  "sphinx-autobuild==2024.4.16",
-  "sphinx-autodoc2==0.5.0",
-  "sphinx-book-theme==1.1.3",
-  "sphinx-design==0.6.0",
-  "sphinx-thebe==0.3.1",
-  "sphinx-tippy==0.4.3",
-  "sphinx-togglebutton==0.3.2",
-  "sphinxcontrib-bibtex==2.6.2",
-  "sphinxcontrib-mermaid==0.9.2",
-  "sphinxcontrib-towncrier==0.4.0a0",
+  "linkify-it-py>=2.0.3",
+  "myst-nb>=1.1.1",
+  "sphinx-autobuild>=2024.4.16",
+  "sphinx-autodoc2>=0.5.0",
+  "sphinx-book-theme>=1.1.3",
+  "sphinx-design>=0.6.0",
+  "sphinx-thebe>=0.3.1",
+  "sphinx-tippy>=0.4.3",
+  "sphinx-togglebutton>=0.3.2",
+  "sphinxcontrib-bibtex>=2.6.2",
+  "sphinxcontrib-mermaid>=0.9.2",
+  "sphinxcontrib-towncrier>=0.4.0a0",
   # ? Tests
-  "pytest-cov==5.0.0",
-  "pytest-custom-exit-code==0.3.0",
-  "pytest-github-actions-annotate-failures==0.2.0",
-  "pytest==8.2.2",
+  "pytest-cov>=5.0.0",
+  "pytest-custom-exit-code>=0.3.0",
+  "pytest-github-actions-annotate-failures>=0.2.0",
+  "pytest>=8.2.2",
 ]
 [tool.uv.pip]
 all-extras = true
