Actually bump the minimum in the template, but only re-lock in projects

--- a/.renovaterc.json
+++ b/.renovaterc.json
@@ -21,10 +21,9 @@
     "pep621",
     "pre-commit"
   ],
-  "pep621": {
-    "fileMatch": ["(^|/)pyproject\\.toml[^/]*$"],
-    "rangeStrategy": "in-range-only"
-  },
+  "github-actions": { "fileMatch": ["(^|/)\\.github/workflows/[^/]+$"] },
+  "pep621": { "fileMatch": ["(^|/)pyproject\\.toml[^/]*$"] },
+  "ignoreDeps": ["towncrier"],
   "customManagers": [
     {
       "description": "uv",
@@ -59,9 +58,6 @@
       "depNameTemplate": "microsoft/pylance-release"
     }
   ],
-  "github-actions": {
-    "fileMatch": ["(^|/)\\.github/workflows/[^/]+$"]
-  },
   "packageRules": [
     {
       "groupName": "all",
