--- a/template/.renovaterc.json
+++ b/template/.renovaterc.json
@@ -21,10 +21,7 @@
     "pep621",
     "pre-commit"
   ],
-  "pep621": {
-    "fileMatch": ["(^|/)pyproject\\.toml[^/]*$"],
-    "rangeStrategy": "in-range-only"
-  },
+  "pep621": { "fileMatch": ["[^|/]pyproject\\.toml[^/]*$"] },
   "customManagers": [
     {
       "description": "uv",
@@ -43,14 +40,6 @@
       "depNameTemplate": "astral-sh/uv"
     },
     {
-      "description": "copier",
-      "customType": "regex",
-      "fileMatch": ["[^|/]\\.copier-version[^/]*$"],
-      "matchStrings": ["(?<currentValue>[^\\n]+)"],
-      "datasourceTemplate": "pypi",
-      "depNameTemplate": "copier"
-    },
-    {
       "description": "pylance",
       "customType": "regex",
       "fileMatch": ["[^|/]\\.pylance-version[^/]*$"],
@@ -65,36 +54,12 @@
       "matchPackageNames": ["*"]
     },
     {
-      "groupName": "dev",
-      "matchDepTypes": ["devDependencies"]
-    },
-    {
-      "groupName": "gha",
-      "matchManagers": ["github-actions"]
-    },
-    {
-      "groupName": "dev package",
-      "matchFileNames": ["[^|/]packages/_dev/pyproject.toml[^/]*$"]
-    },
-    {
-      "groupName": "uv",
-      "matchPackageNames": ["astral-sh/setup-uv"]
-    },
-    {
       "groupName": "ruff",
       "matchPackageNames": ["/^.*ruff.*$/"]
     },
     {
-      "groupName": "fawltydeps",
-      "matchPackageNames": ["/^.*fawltydeps.*$/"]
-    },
-    {
       "groupName": "pylance",
       "matchPackageNames": ["microsoft/pylance-release"]
-    },
-    {
-      "groupName": "copier",
-      "matchPackageNames": ["copier"]
     },
     {
       "groupName": "tests",
