--- a/template/.renovaterc.json
+++ b/template/.renovaterc.json
@@ -26,7 +26,7 @@
       "description": "uv",
       "customType": "regex",
       "fileMatch": ["(^|/)\\.uv-version[^/]*?$"],
-      "matchStrings": ["(?<currentValue>[^\\n]+)"],
+      "matchStrings": ["(?<currentValue>[^\\n]+?)"],
       "datasourceTemplate": "github-releases",
       "depNameTemplate": "astral-sh/uv"
     },
@@ -34,7 +34,7 @@
       "description": "uv-gha",
       "customType": "regex",
       "fileMatch": ["(^|/)\\.github/workflows/[^/]*?$"],
-      "matchStrings": ["- uses: \"astral-sh/setup-uv@.+\\n\\s+with:\\n\\s+version: \"(?<currentValue>.+)\""],
+      "matchStrings": ["- uses: \"astral-sh/setup-uv@.+?\\n\\s+?with:\\n\\s+?version:\\s\"(?<currentValue>.+?)\""],
       "datasourceTemplate": "github-releases",
       "depNameTemplate": "astral-sh/uv"
     },
@@ -42,7 +42,7 @@
       "description": "pylance",
       "customType": "regex",
       "fileMatch": ["(^|/)\\.pylance-version[^/]*?$"],
-      "matchStrings": ["(?<currentValue>[^\\n]+)"],
+      "matchStrings": ["(?<currentValue>[^\\n]+?)"],
       "datasourceTemplate": "github-releases",
       "depNameTemplate": "microsoft/pylance-release"
     }
